public/stylesheets/orders.css
nav {
  margin: 0 auto;
  background-color: var(--dark-chalks);
  transition: background-color 0.2s ease-in-out;
}

nav .container-fluid {
  max-width: 1790px;
}

.nav-menu {
  display: flex;
  justify-content: end;
  width: 100%;
}

.nav-item {
  margin: 16px 0;
}

.nav-title {
  font-family: "Odibee Sans", sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 1.8em;
  letter-spacing: 5;
  color: var(--main-white);
  transition: color 0.2s ease-in-out;
  padding: 0;
  text-decoration: none;
}

.nav-link {
  font-family: "Anek Odia", sans-serif;
  font-size: 1.1em;
  font-weight: 400;
  font-style: normal;
  font-variation-settings: "wdth" 100;
  color: var(--main-white);
  padding: 0;
  transition: color 0.2s ease-in-out;
  line-height: 100%;
}

.nav-link:hover {
  color: var(--main-white-two-percent);
}

.nav-scroll {
  background-color: var(--main-white);
}

.nav-title-scroll {
  color: var(--dark-chalks);
}

.nav-link-scroll {
  color: var(--dark-chalks);
}

.nav-link-scroll:hover {
  color: var(--dark-chalks);
}

#order-container {
  background-color: var(--main-white);
  height: 100%;
  width: 100%;
  max-width: 1790px;
  margin: 0 auto;
}

#new-order {
  position: relative;
  top: 100px;
  margin-left: 28px;
  text-decoration: none;
  border: 1.5px solid var(--dark-chalks);
  border-radius: 4px;
  padding: 8px 16px;
  transition: all 0.2s ease-in-out;
  background: none;
  color: var(--dark-chalks);
}

#new-order:hover {
  color: var(--main-white);
  background-color: var(--dark-chalks);
}

#black-orders {
  font-family: var(--font-title);
  font-size: 500%;
  text-align: center;
  position: relative;
  top: 30%;
}

.ordered-container {
  border: 2px solid var(--dark-chalks);
  border-radius: 4px;
  max-width: 1214px;
  height: 160px;
  margin: 0 auto;
  display: flex;
  justify-content: space-around;
  align-items: center;
  margin-bottom: 32px;
  transition: all 0.5s ease-in-out;
}

#order-container .ordered-container:first-of-type {
  margin-top: 128px;
}

.ordered-container:hover {
  color: var(--main-white);
  background-color: var(--dark-chalks);
}

.order-details {
  display: flex;
  align-items: center;
}

.car-details {
  display: flex;
  align-items: center;
}

.car-bg {
  width: 150px;
  height: 115px;
  border-radius: 4px;
}

.car-details > ul {
  list-style: none;
  padding-left: 0;
  margin-left: 24px;
  height: 110px;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  font-family: var(--font-body);
  text-transform: uppercase;
}

.address-details {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: auto;
  margin-left: 24px;
  padding-left: 24px;
  border-left: 2px var(--dark-chalks) dashed;
}

.address-details p {
  font-family: var(--font-body);
  text-transform: uppercase;
  margin: 0;
  padding: 4px 0;
}

.btns-order {
  display: flex;
  align-items: flex-end;
  height: 100%;
  padding-bottom: 16px;
}

.btns-order a {
  border: 1.5px solid var(--dark-chalks);
  border-radius: 4px;
  padding: 8px 16px;
  cursor: pointer;
  color: var(--dark-chalks);
  transition: all 0.2s ease-in-out;
  text-decoration: none;
  background-color: var(--main-white);
}

.btns-order a:hover {
  background-color: var(--dark-chalks);
  color: var(--main-white);
  border: 1.5px solid var(--main-white);
}

.btns-order a:first-of-type {
  margin-right: 24px;
}

#cancel,
#confirm {
  background-color: transparent;
  color: var(--dark-chalks);
  font-size: 120%;
  font-family: var(--font-body);
  border: 1.5px solid var(--dark-chalks);
  border-radius: 4px;
  padding: 8px 12px;
  text-align: center;
  text-decoration: none;
  width: 40%;
  margin: 16px 0;
  transition: all 0.2s ease-in-out;
}

#cancel:hover,
#confirm:hover {
  background-color: var(--dark-chalks);
  color: var(--main-white);
  cursor: pointer;
}

#icon {
  padding: 8px;
  overflow: hidden;
}

#icon svg {
  float: right;
  cursor: pointer;
  opacity: 1;
  transition: opacity 0.2s ease-in-out;
}

#modal,
#modal {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  width: 100%;
  margin: auto 0;
  background-color: rgb(24, 24, 26, 0.8);
  visibility: hidden;
}

#modal-content,
#modal-content {
  background-color: var(--main-white);
  max-width: 800px;
  height: 0%;
  margin: 25% auto;
  border-radius: 4px;
  opacity: 0;
  position: relative;
  transition: all 0.5s ease-in-out;
}

#modal-content p,
#modal-content p {
  font-family: "Anek Odia", sans-serif;
  color: var(--dark-chalks);
  font-size: 200%;
  font-weight: 400;
  font-style: normal;
  text-align: center;
  padding-top: 25px;
  width: 100%;
}

#modal-buttons {
  margin-top: 32px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  max-width: 450px;
  margin: 32px auto 0;
}

@media (min-width: 501px) and (max-width: 1024px) {
  .ordered-container {
    height: auto;
    padding: 16px;
    display: flex;
    flex-direction: column;
    align-items: start;
    width: 95%;
  }

  .order-details {
    flex-direction: column;
    align-items: start;
    width: 100%;
  }

  .address-details {
    display: block;
    width: 100%;
    margin-top: 24px;
    padding-top: 24px;
    margin-left: 0px;
    padding-left: 0px;
    border-top: 2px var(--dark-chalks) dashed;
    border-left: none;
  }

  .btns-order {
    display: flex;
    align-items: flex-end;
    justify-content: end;
    height: 100%;
    width: 100%;
    padding-bottom: 16px;
  }
}

@media (max-width: 500px) {
  #order-container {
    height: 100vh;
    overflow-y: auto;
  }

  #new-order {
    display: block;
    width: max-content;
    margin: 0 auto;
  }

  .ordered-container {
    height: auto;
    padding: 16px;
    display: flex;
    flex-direction: column;
    align-items: start;
    width: 95%;
  }

  .order-details {
    flex-direction: column;
    align-items: start;
    width: 100%;
    height: 100%;
  }

  .car-bg {
    width: 100px;
    height: 80px;
    border-radius: 4px;
  }

  .car-details > ul {
    font-size: 0.9rem;
  }

  .address-details {
    display: block;
    width: 100%;
    margin-top: 24px;
    padding-top: 24px;
    margin-left: 0px;
    padding-left: 0px;
    border-top: 2px var(--dark-chalks) dashed;
    border-left: none;
  }

  .address-details p {
    font-size: 0.9rem;
  }

  .btns-order {
    display: flex;
    align-items: flex-end;
    justify-content: space-evenly;
    height: 100%;
    width: 100%;
    padding-bottom: 16;
  }
}

